; ModuleID = '/home/carl/AnghaBench/linux/kernel/debug/kdb/extr_kdb_main.c_kdb_grep_help.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/debug/kdb/extr_kdb_main.c_kdb_grep_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [36 x i8] c"Usage of  cmd args | grep pattern:\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"  Any command's output may be filtered through an \00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"emulated 'pipe'.\0A\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"  'grep' is just a key word.\0A\00", align 1
@.str.4 = private unnamed_addr constant [65 x i8] c"  The pattern may include a very limited set of metacharacters:\0A\00", align 1
@.str.5 = private unnamed_addr constant [49 x i8] c"   pattern or ^pattern or pattern$ or ^pattern$\0A\00", align 1
@.str.6 = private unnamed_addr constant [61 x i8] c"  And if there are spaces in the pattern, you may quote it:\0A\00", align 1
@.str.7 = private unnamed_addr constant [61 x i8] c"   \22pat tern\22 or \22^pat tern\22 or \22pat tern$\22 or \22^pat tern$\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**)* @kdb_grep_help to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kdb_grep_help(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %5 = call i32 @kdb_printf(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %6 = call i32 @kdb_printf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %7 = call i32 @kdb_printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %8 = call i32 @kdb_printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0))
  %9 = call i32 @kdb_printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str.4, i64 0, i64 0))
  %10 = call i32 @kdb_printf(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.5, i64 0, i64 0))
  %11 = call i32 @kdb_printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.6, i64 0, i64 0))
  %12 = call i32 @kdb_printf(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.7, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @kdb_printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
